--- a/components/libs/Cargo.toml
+++ b/components/libs/Cargo.toml
@@ -14,7 +14,7 @@ filetime = "0.2"
 gh-emoji = "1"
 glob = "0.3"
 globset = "0.4"
-image = { version = "0.25", features = ["avif"] }
+image = "0.25"
 lexical-sort = "0.3"
 minify-html = "0.15"
 nom-bibtex = "0.5"
